--- a/source/R5T.D0076.Default/R5T.D0076.Default.csproj
+++ b/source/R5T.D0076.Default/R5T.D0076.Default.csproj
@@ -8,6 +8,7 @@
     <ProjectReference Include="..\..\..\R5T.D0074\source\R5T.D0074.Base\R5T.D0074.Base.csproj" />
     <ProjectReference Include="..\..\..\R5T.D0075\source\R5T.D0075.Base\R5T.D0075.Base.csproj" />
     <ProjectReference Include="..\..\..\R5T.Dacia.Extensions\source\R5T.Dacia.Extensions\R5T.Dacia.Extensions.csproj" />
+    <ProjectReference Include="..\..\..\R5T.T0062\source\R5T.T0062.X001\R5T.T0062.X001.csproj" />
     <ProjectReference Include="..\R5T.D0076.Base\R5T.D0076.Base.csproj" />
   </ItemGroup>
 
