--- a/source/R5T.D0076.A001/R5T.D0076.A001.csproj
+++ b/source/R5T.D0076.A001/R5T.D0076.A001.csproj
@@ -1,13 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>1591;1573</NoWarn>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\..\R5T.D0074\source\R5T.D0074.A001\R5T.D0074.A001.csproj" />
     <ProjectReference Include="..\..\..\R5T.D0075\source\R5T.D0075.Default\R5T.D0075.Default.csproj" />
     <ProjectReference Include="..\R5T.D0076.Default\R5T.D0076.Default.csproj" />
   </ItemGroup>
-
 </Project>
