--- a/source/R5T.D0076.Default/R5T.D0076.Default.csproj
+++ b/source/R5T.D0076.Default/R5T.D0076.Default.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>1591;1573</NoWarn>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\..\..\R5T.D0074\source\R5T.D0074.Base\R5T.D0074.Base.csproj" />
     <ProjectReference Include="..\..\..\R5T.D0075\source\R5T.D0075.Base\R5T.D0075.Base.csproj" />
@@ -11,5 +11,4 @@
     <ProjectReference Include="..\..\..\R5T.T0062\source\R5T.T0062.X001\R5T.T0062.X001.csproj" />
     <ProjectReference Include="..\R5T.D0076.Base\R5T.D0076.Base.csproj" />
   </ItemGroup>
-
 </Project>
